--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Main</title>
-    <script src="../app.js"></script>
-    <link rel="stylesheet" href="../src/main.css" />
   </head>
 
   <body>
+    <script type="text/javascript" src="../src/index.js"></script>
     <div id="myapp"></div>
-    <script>
-      var app = Elm.Main.init({
-        node: document.getElementById("myapp"),
-      });
-    </script>
   </body>
 </html>
