--- a/styles/main.scss
+++ b/styles/main.scss
@@ -105,10 +105,6 @@ h1 {
   font-size: 2rem;
 }
 
-// .results {
-//   width: 85%;
-// }
-
 .article-info {
   display: flex;
   flex-flow: column nowrap;
@@ -227,6 +223,7 @@ h1 {
   .card {
     flex-basis: 75%;
     margin: auto;
+    margin-top: 25px;
   }
 
   @media (min-width: 1700px) {
